--- a/src/components/Planer/ToDoList/ToDoList.module.css
+++ b/src/components/Planer/ToDoList/ToDoList.module.css
@@ -1,14 +1,22 @@
-.list{
-    height:18rem;
-    overflow:scroll;
+.list {
+  height: 18rem;
+  overflow: scroll;
+}
+.firstTask {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-size: 2rem;
+  letter-spacing: 0.8px;
+  font-weight: 400;
+  color: rgb(120, 125, 150);
+
 }
 
-input{
-    width: 65%;
-
+input {
+  width: 65%;
 }
 @media only screen and (max-width: 1280px) {
-    input {
-      width:40%;
-    }
+  input {
+    width: 40%;
   }
+}
