--- a/src/components/Planer/Weather/Weather.module.css
+++ b/src/components/Planer/Weather/Weather.module.css
@@ -44,7 +44,11 @@
     font-family: 'Roboto', sans-serif;
 
 }
-
+.btn-change-city{
+    font-size: 1.5rem;
+    background-color: transparent;
+    border: none;
+}
 @media only screen and (max-width: 1000px) {
     .hourElement-container{
         display: flex;
